--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web_tech_project",
+  "name": "web",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -15,6 +15,7 @@
     "express-handlebars": "^5.3.2",
     "handlebars": "^4.7.7",
     "mongoose": "^5.12.13",
+    "mongoose-delete": "^0.5.3",
     "path": "^0.12.7"
   }
 }
