--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sdds",
+  "name": "web",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,13 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.5",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "handlebars": "^4.7.7",
     "mongoose": "^5.12.13",
+    "mongoose-delete": "^0.5.3",
     "path": "^0.12.7"
-  },
-  "engines": {
-    "node": "v6.14.13"
   }
 }
