--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "handlebars": "^4.7.7",
+    "heroku": "^7.54.1",
     "mongoose": "^5.12.13",
     "path": "^0.12.7"
   },
